[package]
name = "btc15-prob-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
